[package]
name = "TheEndCycle"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_dev_tools = "0.16.1"
rand = "0.9.1"
